# grip

./: .gitignore  AUTHORS  CREDITS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  grip.desktop  grip.spec.in  mkinstalldirs
contrib/: Makefile.am  Makefile.in  write-gronk-discid
doc/: Makefile.in
doc/C/: Makefile.am  Makefile.in  grip.xml
pixmaps/: Makefile.am  Makefile.in  cdscan.xpm  check.xpm  discdb0.xpm  discdb1.xpm  discdbwht.xpm  edit.xpm  eject.xpm  enc0.xpm  enc1.xpm  enc2.xpm  enc3.xpm  gcd.xpm  grip.xpm  lowleft.xpm  lowright.xpm  mail.xpm  menunext.xpm  menupause.xpm  menuplay.xpm  menuprev.xpm  menustop.xpm  minmax.xpm  playlist.xpm  playnorm.xpm  progtrack.xpm  quit.xpm  random.xpm  rip0.xpm  rip1.xpm  rip2.xpm  rip3.xpm  rotate.xpm  save.xpm  smile1.xpm  smile2.xpm  smile3.xpm  smile4.xpm  smile5.xpm  (+6 more)
po/: ChangeLog  Makefile.in.in  POTFILES.in  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  grip-2.2.pot  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  pl_PL.gmo  pl_PL.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
src/: Makefile.am  Makefile.in  cddev.c  cddev.h  cdpar.c  cdpar.h  cdplay.c  cdplay.h  common.h  cppmain.cc  dialog.c  dialog.h  discdb.c  discdb.h  discedit.c  discedit.h  eggtrayicon.c  eggtrayicon.h  gain_analysis.c  grip.c  grip.h  grip_id3.h  gripcfg.c  gripcfg.h  id3.c  launch.c  launch.h  main.c  parsecfg.c  parsecfg.h  rip.c  rip.h  status_window.c  status_window.h  tray.c  tray.h  uihelper.c  xpm.h
